fix: move contact-row to the outer scope, display shelter picture on mobile [wip]

--- a/frontend/src/scss/layout/_footer.scss
+++ b/frontend/src/scss/layout/_footer.scss
@@ -26,18 +26,18 @@
   }
 
   &__wrapper {
-    display: flex;
+    display: grid;
+    gap: 2.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     margin-top: 60px;
   }
 
   &__pic {
+    width: 100%;
+    height: 100%;
     margin-right: 30px;
     border-radius: $border-radius;
     object-fit: cover;
-
-    @include for-tablet-down {
-      display: none;
-    }
   }
 
   &__content {
@@ -59,20 +59,20 @@
   &__contact-list {
     list-style: none;
     margin: 0;
+  }
+}
 
-    .contact-row {
-      font-size: 1.125em;
+.contact-row {
+  font-size: 1.125em;
 
-      &:not(:last-child) {
-        margin-bottom: 20px;
-      }
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 
-      &__content {
-        @include loud;
-        text-decoration: none;
-        display: block;
-        color: $inverse-primary-txt-color;
-      }
-    }
+  &__content {
+    @include loud;
+    text-decoration: none;
+    display: block;
+    color: $inverse-primary-txt-color;
   }
 }
