--- a/frontend/src/static/styles.css
+++ b/frontend/src/static/styles.css
@@ -693,18 +693,17 @@ template {
   left: 0;
 }
 .page-footer__wrapper {
-  display: flex;
+  display: grid;
+  gap: 2.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   margin-top: 60px;
 }
 .page-footer__pic {
+  width: 100%;
+  height: 100%;
   margin-right: 30px;
   border-radius: 8px;
   object-fit: cover;
-}
-@media (max-width: 1023.9px) {
-  .page-footer__pic {
-    display: none;
-  }
 }
 .page-footer__content {
   color: #fff;
@@ -724,13 +723,14 @@ template {
   list-style: none;
   margin: 0;
 }
-.page-footer__contact-list .contact-row {
+
+.contact-row {
   font-size: 1.125em;
 }
-.page-footer__contact-list .contact-row:not(:last-child) {
+.contact-row:not(:last-child) {
   margin-bottom: 20px;
 }
-.page-footer__contact-list .contact-row__content {
+.contact-row__content {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.4;
